[gd_scene load_steps=13 format=2]

[ext_resource path="res://Sprites/lantern_light.png" type="Texture" id=1]
[ext_resource path="res://Sprites/player_sprite/side1.PNG" type="Texture" id=2]
[ext_resource path="res://Sprites/player_sprite/front1.PNG" type="Texture" id=3]
[ext_resource path="res://Sprites/fadesprite.png" type="Texture" id=4]
[ext_resource path="res://Sprites/winfadesprite.png" type="Texture" id=5]
[ext_resource path="res://Sprites/player_sprite/back1.PNG" type="Texture" id=6]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=7]
[ext_resource path="res://Sprites/player_sprite/left.PNG" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "fade",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "winfade",
"speed": 5.0
} ]

[node name="Player" type="Area2D"]
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 1 )

[node name="LightTween" type="Tween" parent="Light2D"]

[node name="ResetTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 2.0

[node name="FadeSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 3 )
frames = SubResource( 4 )
animation = "fade"

[node name="FadeTween" type="Tween" parent="FadeSprite"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Player_body_exited"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
